Try to load resource-embedded catalog from application. Should fix #8037.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42950 a95241bf-73f2-0310-859d-f6bbb57e9c96